...
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_codigo_frente"
        app:layout_constraintRight_toLeftOf="@+id/guidelineFrente"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/btnBajarMaestro"
        android:layout_width="59dp"
        android:layout_height="38dp"
        app:srcCompat="@drawable/ic_conexion"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
...
        <!--android:visibility="invisible"-->
        <!--android:onClick="revertir"/>-->
    <!--<Button-->
        <!--android:id="@+id/btnBajarMaestro"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="BAJAR MAESTROS"-->
        <!--android:onClick="bajar_maestros"/>-->

<!--</LinearLayout>-->


    <!--<LinearLayout-->
...
                <!--android:text="Orden de Servicio"-->
                <!--android:textSize="30dp"-->
                <!--android:textAlignment="center"-->
                <!--android:textColor="#fff"-->
                <!--/>-->
            <!--<ImageButton-->
                <!--android:id="@+id/Button01"-->
                <!--android:layout_width="40dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:background="@drawable/cambiar_icono"-->
                <!--android:onClick="cambiarOrden"-->
                <!--android:backgroundTint="#fff"-->
                <!--&gt;-->
...
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/tvImplemento1"-->
                <!--android:orientation="horizontal"-->
                <!--&gt;-->
                <!--<ImageButton-->
                <!--android:id="@+id/btnImplemento1"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="50dp"-->
                <!--android:src="@drawable/cambiar_icono"-->
                <!--android:tint="#fff"-->
                <!--android:onClick="cambiarImplemento1"-->
...
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/tvImplemento2"-->
                <!--android:orientation="horizontal"-->
                <!--&gt;-->
                <!--<ImageButton-->
                    <!--android:id="@+id/btnImplemento2"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:src="@drawable/cambiar_icono"-->
                    <!--android:tint="#fff"-->
                    <!--android:onClick="cambiarImplemento2"-->
...
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/tvImplemento3"-->
                <!--android:orientation="horizontal"-->
                <!--&gt;-->
                <!--<ImageButton-->
                    <!--android:id="@+id/btnImplemento3"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:src="@drawable/cambiar_icono"-->
                    <!--android:tint="#fff"-->
                    <!--android:onClick="cambiarImplemento3"-->
...
    <!--<Button-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Empleado"-->
        <!--android:layout_gravity="center"-->
        <!--android:id="@+id/btnCodigoEmpleado"-->
        <!--android:onClick="ScanCodigoEmpleado"-->
        <!--/>-->
    <!--<Button-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Frente"-->
        <!--android:layout_gravity="center"-->
        <!--android:id="@+id/btnFrente"-->
        <!--android:onClick="buscadorFrente"-->
        <!--/>-->
<!--</LinearLayout>-->
<!--</LinearLayout>-->

