...
        app:layout_constraintTop_toTopOf="@+id/seleccion_actual"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:background="@drawable/barrainferiorbackground"
        android:hint="Busqueda de Implementos"
        android:drawableLeft="@drawable/lupa"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerviewImplementos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/contadorBusqueda"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
