...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch"
        android:layout_marginTop="0dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerviewFrentes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/contadorBusqueda"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
